...
    mainViewmodel: MainViewmodel
) {
    val value by mainViewmodel.searchQuery.collectAsStateWithLifecycle();
    val images by mainViewmodel.imageList.collectAsStateWithLifecycle()
    Timber.d("IMAGESS : %s", Gson().toJson(images))
    Column(
        modifier = modifier.semantics { contentDescription = "AddImage Screen" }
    ) {
        Row(horizontalArrangement = Arrangement.Center, modifier = Modifier.fillMaxWidth()) {
            OutlinedTextField(
                value = value,
                onValueChange = {
                    mainViewmodel.searchItem(it)
...
