...
    viewmodel: MainViewmodel,
    onNavigateToAddImage : (String) -> Unit
) {

    val shoppingItem by viewmodel.shoppingItem.collectAsStateWithLifecycle()
    Timber.d("DATA : %s", Gson().toJson(shoppingItem))
    Column(modifier = modifier.fillMaxWidth().semantics { contentDescription = "AddItem Screen" }) {
        Row(
            modifier = Modifier
                .fillMaxWidth(),
            verticalAlignment = Alignment.CenterVertically
        ) {
            AsyncImage(
...
